--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -66,14 +66,28 @@
   gap: 20px;
 }
 
+.time-circle {
+  position: relative;
+  --progress: 1;
+  width: 55px;
+  height: 55px;
+  stroke-width: 1px;
+  stroke: #fff;
+  fill: none;
+  stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
+  stroke-dasharray: 125.6;
+}
+
 .number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
-  border: solid 1px #fff;
-  border-radius: 50%;
+  
   font-weight: bold;
 }
 
