add: swiper slider

--- a/src/pages/slider/index.astro
+++ b/src/pages/slider/index.astro
@@ -1,7 +1,7 @@
 ---
-import "../styles/slider.css"
-import Layout from "../layouts/Layout.astro"
-import { SwiperSlider } from "../components/Slider/Slider"
+import "../../styles/slider.css"
+import Layout from "../../layouts/Layout.astro"
+import { SwiperSlider } from "../../components/Slider"
 ---
 
 <Layout title="Swiper Slider">
