--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,11 +1,16 @@
+:root {
+  --main-color: #FDEFBA;
+  --sub-color: #FF0C17;
+}
+
 .slider {
   padding: 50px 0;
-  padding-right: 80px;
-  background-color: rgb(17, 181, 126);
+  padding-right: 100px;
+  background-color: var(--main-color);
   font-family: 'Playfair Display', serif;
 }
 .slider h1 {
-  color: #fff;
+  color: var(--sub-color);
   font-size: 40px;
   font-weight: bold;
   letter-spacing: 5px;
@@ -15,14 +20,14 @@
   display: flex;
 }
 .title h2 {
-  color: #fff;
-  font-size: 30px;
+  color: var(--sub-color);
+  font-size: 35px;
   font-weight: bold;
   letter-spacing: 5px;
   margin-bottom: 15px;
 }
 .title span {
-  color: #fff;
+  color: var(--sub-color);
 }
 .left-content {
   width: 50%;
@@ -31,7 +36,14 @@
 .right-content {
   width: 50%;
   padding: 100px;
+  padding-right: 0;
 }
+
+.swiper {
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
 .list {
   margin-top: 30px;
 }
@@ -39,50 +51,59 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: all 0.5s;
 
   cursor: pointer;
-  color: #fff;
+  color: var(--sub-color);
   padding: 15px;
-  border-bottom: solid 1px #fff;
+  border-bottom: solid 2px var(--sub-color);
 
   &:first-child {
-    border-top: solid 1px #fff;
+    border-top: solid 2px var(--sub-color);
   }
 
   &:hover {
-    color: rgb(17, 181, 126);
-    background-color: #fff;
+    color: var(--main-color);
+    background-color: var(--sub-color);
+    transition: all 0.5s;
   }
 }
 
 .item.is-focus {
-  color: rgb(17, 181, 126);
-  background-color: #fff;
+  color: var(--main-color);
+  background-color: var(--sub-color);
+  transition: all 0.5s;
 }
 
 .item-title {
   display: flex;
   align-items: center;
   gap: 20px;
+  font-weight: bold;
 }
 
 .time-circle {
   position: relative;
-  --progress: 1;
   width: 55px;
   height: 55px;
-  stroke-width: 1px;
-  stroke: #fff;
+  stroke-width: 2px;
+  stroke: var(--main-color);
   fill: none;
-  stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
   stroke-dasharray: 125.6;
+  transform: rotate(-90deg);
+}
+
+.time-circle.is-focus {
+  stroke: var(--main-color);
+  --progress: 0;
+  stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
 }
 
 .number {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotate(90deg);
 
   display: flex;
   align-items: center;
