ディレクトリ構造 修正

--- a/src/components/Loading/Loading1/index.astro
+++ b/src/components/Loading/Loading1/index.astro
@@ -1,12 +1,12 @@
 ---
-import "../../styles/loading.css"
+import "./style.css"
 ---
 
 <div class="loading">
   <div class="plane plane--darkGreen">
     <div class="catch-copy">
       <div class="icon">
-        <img src="images/icon.png" alt="キャラクター">
+        <img src="../images/icon.png" alt="キャラクター">
       </div>
       <p>
         <span>あ、</span>
