--- a/src/pages/loading/loading1/index.astro
+++ b/src/pages/loading/loading1/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../layouts/Layout.astro"
-import Loading from "../../components/Loading/index.astro"
+import Layout from "../../../layouts/Layout.astro"
+import Loading from "../../../components/Loading/Loading1/index.astro"
 ---
 
 <Layout title="Loading">
