--- a/src/pages/slider/slider1/index.astro
+++ b/src/pages/slider/slider1/index.astro
@@ -1,7 +1,6 @@
 ---
-import "../../styles/slider.css"
-import Layout from "../../layouts/Layout.astro"
-import { SwiperSlider } from "../../components/Slider"
+import Layout from "../../../layouts/Layout.astro"
+import { SwiperSlider } from "../../../components/Slider/Slider1"
 ---
 
 <Layout title="Swiper Slider">
