--- a/src/components/Loading/Loading2/index.astro
+++ b/src/components/Loading/Loading2/index.astro
@@ -3,5 +3,11 @@ import "./style.css"
 ---
 
 <div class="loading">
-  
+  <p>12%</p>
+  <h1>Loading</h1>
+  <div class="circle"></div>
 </div>
+
+<script>
+  
+</script>
