--- a/src/components/Hover/Hover1/style.css
+++ b/src/components/Hover/Hover1/style.css
@@ -1,19 +1,31 @@
 @font-face {
   font-family: Melete-Bold;
   src: url('../../../../public/fonts/Melete-Bold.otf');
+  font-display: swap;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hover-animation {
   position: relative;
-  width: auto;
-  height: calc(100vh - 100px);
-  margin: 50px;
-  border-radius: 15px;
+  width: 0;
+  height: 10px;
   font-family: Melete-Bold;
 
+  border-radius: 5px;
   background-size: cover;
   background-position: center;
   background-image: url('../../../../public/images/hover/bg.jpg');
+
+  transform: scale(0.1);
+  transition: 0.5s;
+  will-change: width height border-radius transform margin;
 }
 
 .hover-animation h1 {
@@ -31,23 +43,6 @@
   display: block;
 }
 
-.stalker {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-
-  width: 50px;
-  height: 50px;
-  border: solid 1px #000;
-  background-color: #fff;
-  border-radius: 50%;
-  transition-timing-function: linear;
-  transition-duration: 0.1s;
-  mix-blend-mode: difference;
-  pointer-events: none
-}
-
 .hover-animation-title {
   position: relative;
   margin-bottom: 50px;
@@ -63,6 +58,7 @@
 
   opacity: 0;
   pointer-events: none;
+  will-change: transform opacity;
 }
 
 .title {
@@ -71,4 +67,6 @@
   transition-timing-function: ease-out;
   transition-duration: 0.5s;
   mix-blend-mode: difference;
+  visibility: hidden ;
+  opacity: 0;
 }
