--- a/src/pages/slider/slider1/index.astro
+++ b/src/pages/slider/slider1/index.astro
@@ -1,13 +1,20 @@
 ---
-import Layout from "../../../layouts/Layout.astro"
-import { SwiperSlider } from "../../../components/Slider/Slider1"
+import "../../../styles/sass/styles.scss"
+import { SwiperSlider } from "./index"
 ---
 
-<Layout title="Swiper Slider">
-  <SwiperSlider client:load />
-</Layout>
-
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-</style>
+<!doctype html>
+<html lang="ja">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Astro description" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>Slider1</title>
+	</head>
+	<body>
+    <SwiperSlider client:load />
+  </body>
+</html>
   
