--- a/src/pages/slider/slider1/style.css
+++ b/src/pages/slider/slider1/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
 :root {
   --main-color: #FDEFBA;
   --sub-color: #FF0C17;
