add: マークアップ大枠作成

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,6 +37,13 @@ import "./style.css"
 					<li><a href="/slider/slider1">slider1</a></li>
 				</ul>
 			</div>
+
+			<div>
+				<h1>Works</h1>
+				<ul>
+					<li><a href="/works01">works01</a></li>
+				</ul>
+			</div>
 		</main>
 	</body>
 </html>
