--- a/src/pages/works01/scss/style.scss
+++ b/src/pages/works01/scss/style.scss
@@ -1,7 +1,25 @@
+@font-face {
+  font-family: "sixCaps";
+  src:
+    url("/public/fonts/SixCaps.ttf") format("truetype"),
+}
+
+@font-face {
+  font-family: "nagoda";
+  src:
+    url("/public/fonts/Nagoda.ttf") format("truetype"),
+}
 :root {
   --main-color: #EAE9D3;
   --sub-color: #CD6556;
   --other-color: #65585E;
+
+  --main-font: sixCaps;
+  --sub-font: nagoda;
+}
+
+body {
+  font-family: nagoda;
 }
 
 .header {
@@ -20,6 +38,7 @@
 
   &__logo {
     h1 {
+      font-size: 20px;
       font-weight: 600;
     }
   }
@@ -52,6 +71,7 @@
     left: 0;
     z-index: -1;
     opacity: 0;
+    visibility: hidden;
     width: 100%;
     height: 100vh;
     padding: 15px;
