add: slider機能の作成

--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -1,7 +1,6 @@
 ---
 import "../../styles/sass/styles.scss"
 import "./scss/style.scss"
-import './ts/script'
 ---
 
 <!doctype html>
@@ -32,14 +31,17 @@ import './ts/script'
       </div>
     </header>
     <main>
-      <section class="section"></section>
-      <section class="section"></section>
-      <section class="section"></section>
-      <section class="section"></section>
-      <section class="section"></section>
+      <div class="page">
+        <section class="section"></section>
+        <section class="section"></section>
+        <section class="section"></section>
+        <section class="section"></section>
+        <section class="section"></section>
+      </div>
     </main>
     <footer>
 
     </footer>
+    <script src="./ts/script.ts"></script>
   </body>
 </html>
