--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -30,13 +30,20 @@ import "./scss/style.scss"
         </ul>
       </div>
     </header>
-    <main>
-      <div class="page">
+    <main class="main">
+      <div class="slider">
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
+      </div>
+      <div class="pagination">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </main>
     <footer>
