--- a/src/pages/works01/scss/style.scss
+++ b/src/pages/works01/scss/style.scss
@@ -93,14 +93,49 @@ body {
   }
 }
 
-.section {
-  height: 100vh;
+.main {
+  position: relative;
+}
 
-  &:nth-child(even) {
-    background-color: var(--sub-color);
+.slider {
+  .section {
+    height: 100vh;
+  
+    &:nth-child(even) {
+      background-color: var(--sub-color);
+    }
+  
+    &:nth-child(odd) {
+      background-color: var(--main-color);
+    }
   }
+}
 
-  &:nth-child(odd) {
-    background-color: var(--main-color);
+.pagination {
+  position: fixed;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 20px;
+
+  span {
+    display: block;
+    width: 10px;
+    height: 10px;
+    background-color: var(--other-color);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.5s;
+
+    &.is-active {
+      width: 15px;
+      height: 15px;
+      transition: 0.5s;
+    }
   }
 }
