--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -32,7 +32,20 @@ import "./scss/style.scss"
     </header>
     <main class="main">
       <div class="slider">
-        <section class="section"></section>
+        <section class="section top">
+          <div class="top__desc">
+            <div class="top__title">
+              <span>01 Building</span>
+              <h2>Glass Ceiling Building: Concrete Structure, Flooded with Beautiful Sunlight</h2>
+            </div>
+            <div class="top__text">
+              <p>This building is a place where modern design harmonizes with the beauty of nature. Constructed with concrete and featuring a stunning glass ceiling, it allows soft sunlight to gracefully pour in. The entire space is filled with brightness and openness, blending seamlessly with nature. Sunlight reflects within the building, creating beautiful shadows. This luminous environment refreshes the mind and stimulates creativity. Additionally, utilizing natural light enhances energy efficiency. Each room is spacious, exuding cleanliness and a modern atmosphere. The glass ceiling provides natural light throughout the day, offering a comfortable environment. Here, one can escape the hustle and bustle of the busy city and engage in work or creative activities in a relaxed atmosphere. This building, in harmony with nature, is filled with warmth and brightness, providing a pleasant space.</p>
+            </div>
+          </div>
+          <div class="top__image">
+            <img src="/images/works01/top.webp" alt="コンクリートの壁、天井がガラス張りの建物">
+          </div>
+        </section>
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
