--- a/src/pages/works01/scss/style.scss
+++ b/src/pages/works01/scss/style.scss
@@ -139,3 +139,48 @@ body {
     }
   }
 }
+
+.top {
+  display: flex;
+
+  &__desc {
+    width: 50%;
+    margin-top: 120px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+  }
+
+  &__title {
+    margin-bottom: 30px;
+
+    span {
+      display: block;
+      font-size: 1.5vw;
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      font-size: 3vw;
+      opacity: 0.1;
+    }
+  }
+
+  &__text {
+    p {
+      line-height: 2;
+      overflow: hidden;
+    }
+  }
+
+  &__image {
+    width: 50%;
+    height: 100vh;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
