--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -35,7 +35,7 @@ import "./scss/style.scss"
         <section class="section top">
           <div class="top__desc">
             <div class="top__title">
-              <span>01 Building</span>
+              <span class="tag">01 Building</span>
               <h2>Glass Ceiling Building: Concrete Structure, Flooded with Beautiful Sunlight</h2>
             </div>
             <div class="top__text">
