--- a/src/pages/works01/scss/style.scss
+++ b/src/pages/works01/scss/style.scss
@@ -185,11 +185,14 @@ body {
   &__image {
     width: 50%;
     height: 100vh;
+    overflow: hidden;
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+
+      @include scaleDown;
     }
   }
 }
