--- a/src/pages/works01/scss/style.scss
+++ b/src/pages/works01/scss/style.scss
@@ -144,8 +144,16 @@ body {
 
 .tag {
   display: block;
-  font-size: 1.5vw;
+  overflow: hidden;
+  font-size: 2.5vw;
   margin-bottom: 30px;
+
+  p {
+    line-height: 1;
+    span {
+      @include sequentialString(--sub-color);
+    }
+  }
 }
 
 .top {
@@ -166,7 +174,7 @@ body {
       font-size: 3vw;
 
       span {
-        @include stringOpacity;
+        @include opacityString;
       }
 
     }
