--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -18,37 +18,45 @@ import "./scss/style.scss"
       <div class="header__logo">
         <h1>Works01</h1>
       </div>
-      <button class="header__btn">
-        <span></span><span></span><span></span>
-      </button>
-      <div class="header__nav">
-        <ul class="header__list">
-          <li class="header__item"><a href="#">About</a></li>
-          <li class="header__item"><a href="#">Works</a></li>
-          <li class="header__item"><a href="#">Blog</a></li>
-          <li class="header__item"><a href="#">Contact</a></li>
-        </ul>
-      </div>
     </header>
     <main class="main">
       <div class="slider">
-        <section class="section top">
-          <div class="top__desc">
-            <div class="top__title">
-              <div class="tag">
-                <p>01 Building</p>
+        <section class="section">
+          <div class="building">
+            <div class="building__desc">
+              <div class="building__title">
+                <div class="tag">
+                  <p>01 Building</p>
+                </div>
+                <h2>Glass Ceiling Building: Concrete Structure, Flooded with Beautiful Sunlight</h2>
               </div>
-              <h2>Glass Ceiling Building: Concrete Structure, Flooded with Beautiful Sunlight</h2>
+              <div class="building__text">
+                <p>Constructed with concrete and featuring a stunning glass ceiling, it allows soft sunlight to gracefully pour in. The entire space is filled with brightness and openness, blending seamlessly with nature. Sunlight reflects within the building, creating beautiful shadows. This luminous environment refreshes the mind and stimulates creativity. Additionally, utilizing natural light enhances energy efficiency. Each room is spacious, exuding cleanliness and a modern atmosphere. The glass ceiling provides natural light throughout the day, offering a comfortable environment. Here, one can escape the hustle and bustle of the busy city and engage in work or creative activities in a relaxed atmosphere. This building, in harmony with nature, is filled with warmth and brightness, providing a pleasant space.</p>
+              </div>
             </div>
-            <div class="top__text">
-              <p>Constructed with concrete and featuring a stunning glass ceiling, it allows soft sunlight to gracefully pour in. The entire space is filled with brightness and openness, blending seamlessly with nature. Sunlight reflects within the building, creating beautiful shadows. This luminous environment refreshes the mind and stimulates creativity. Additionally, utilizing natural light enhances energy efficiency. Each room is spacious, exuding cleanliness and a modern atmosphere. The glass ceiling provides natural light throughout the day, offering a comfortable environment. Here, one can escape the hustle and bustle of the busy city and engage in work or creative activities in a relaxed atmosphere. This building, in harmony with nature, is filled with warmth and brightness, providing a pleasant space.</p>
+            <div class="building__image">
+              <img src="/images/works01/building1.webp" alt="コンクリートの壁、天井がガラス張りの建物">
             </div>
-          </div>
-          <div class="top__image">
-            <img src="/images/works01/top.webp" alt="コンクリートの壁、天井がガラス張りの建物">
           </div>
         </section>
-        <section class="section"></section>
+        <section class="section">
+          <div class="building">
+            <div class="building__image">
+              <img src="/images/works01/building2.webp" alt="夕日に照らされた高層ビル">
+            </div>
+            <div class="building__desc">
+              <div class="building__title">
+                <div class="tag reverse">
+                  <p>02 Building</p>
+                </div>
+                <h2>The Sunset Tower stands tall, bathed in the evening glow.</h2>
+              </div>
+              <div class="building__text">
+                <p>The high-rise building illuminated by the setting sun offers a breathtaking view. Particularly captivating as the sun descends, the tall structure's glass windows and surfaces gleam beautifully in the evening light. During dusk, the surrounding scenery is bathed in deep orange and pink hues, resembling a picturesque painting. The reflection of the sunset's light on each floor of the building, as the sky turns orange, is truly mesmerizing and is sure to become a lifelong memory. Watching the sunset from the high vantage point of the building allows one to escape the hustle and bustle of everyday life, quieting the mind and providing an opportunity to connect with the beauty of nature. Visitors can enjoy the view from this sunset-lit high-rise building and rejuvenate both body and soul.</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="section"></section>
         <section class="section"></section>
         <section class="section"></section>
