--- a/src/pages/works01/scss/style.scss
+++ b/src/pages/works01/scss/style.scss
@@ -1,23 +1,22 @@
-@use './animation.scss' as *;
+@use "./animation.scss" as *;
+
+:root {
+  --main-color: #eae9d3;
+  --sub-color: #cd6556;
+  --other-color: #65585e;
+
+  --main-font: sixCaps;
+  --sub-font: nagoda;
+}
 
 @font-face {
   font-family: "sixCaps";
-  src:
-    url("/public/fonts/SixCaps.ttf") format("truetype"),
+  src: url("/public/fonts/SixCaps.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "nagoda";
-  src:
-    url("/public/fonts/Nagoda.ttf") format("truetype"),
-}
-:root {
-  --main-color: #EAE9D3;
-  --sub-color: #CD6556;
-  --other-color: #65585E;
-
-  --main-font: sixCaps;
-  --sub-font: nagoda;
+  src: url("/public/fonts/Nagoda.ttf") format("truetype");
 }
 
 body {
@@ -45,54 +44,6 @@ body {
       font-weight: 600;
     }
   }
-
-  &__btn {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 5px;
-
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: var(--other-color);
-
-    span {
-      display: block;
-      width: 80%;
-      height: 1.5px;
-      border-radius: 5px;
-      background-color: var(--main-color);
-    }
-  }
-
-  &__nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    opacity: 0;
-    visibility: hidden;
-    width: 100%;
-    height: 100vh;
-    padding: 15px;
-    background-color: var(--other-color);
-  }
-
-  &__list {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 3rem;
-    height: 100vh;
-  }
-
-  &__item {
-    font-weight: 600;
-    font-size: 2rem;
-  }
 }
 
 .main {
@@ -102,11 +53,11 @@ body {
 .slider {
   .section {
     height: 100vh;
-  
+
     &:nth-child(even) {
       background-color: var(--sub-color);
     }
-  
+
     &:nth-child(odd) {
       background-color: var(--main-color);
     }
@@ -150,13 +101,14 @@ body {
 
   p {
     line-height: 1;
-    span {
-      @include sequentialString(--sub-color);
-    }
+  }
+
+  &.reverse p {
+    line-height: 1;
   }
 }
 
-.top {
+.building {
   display: flex;
 
   &__desc {
@@ -172,20 +124,18 @@ body {
 
     h2 {
       font-size: 3vw;
-
       span {
-        @include opacityString;
+        opacity: 0.1;
       }
-
     }
   }
 
   &__text {
     p {
       line-height: 2;
-      
       span {
-        @include slideInFormBottom;
+        clip-path: inset(100% 0 0 0);
+        -webkit-clip-path: inset(100% 0 0 0);
       }
     }
   }
@@ -199,8 +149,38 @@ body {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+}
 
-      @include scaleDown;
+.section.is-active {
+  .tag {
+    p span {
+      @include sequentialString(--sub-color);
+    }
+
+    &.reverse p span {
+      @include sequentialString(--main-color);
+    }
+  }
+
+  .building {
+    &__title {
+      h2 span {
+        @include opacityString;
+      }
+    }
+
+    &__text {
+      p span {
+        @include slideInFormBottom;
+      }
+    }
+
+    &__image {
+      img {
+        @include scaleDown;
+      }
     }
   }
 }
