add: section3,4追加

--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -57,8 +57,42 @@ import "./scss/style.scss"
             </div>
           </div>
         </section>
-        <section class="section"></section>
-        <section class="section"></section>
+        <section class="section">
+          <div class="building">
+            <div class="building__desc">
+              <div class="building__title">
+                <div class="tag">
+                  <p>03 Building</p>
+                </div>
+                <h2>Urban Vista: Glass Towers, Vibrant Yellow Buildings, Luxurious Mansions</h2>
+              </div>
+              <div class="building__text">
+                <p>"Urban Vista" offers a stunning panorama of adjacent buildings, including modern glass towers, vibrant yellow structures, and luxurious apartments. The glass towers provide panoramic views of the bustling cityscape, flooded with bright sunlight, creating a rich tapestry of sights. Vibrant yellow buildings symbolize energy and vitality, adding warmth and positive vibes to the urban landscape. Meanwhile, the mansions offer luxurious and comfortable living spaces, serving as popular retreats from the city's hustle and bustle. Together, these buildings reflect the diversity and beauty of the city, captivating visitors with surprises and awe.</p>
+              </div>
+            </div>
+            <div class="building__image">
+              <img src="/images/works01/building3.webp" alt="隣り合ったいくつかの建物">
+            </div>
+          </div>
+        </section>
+        <section class="section">
+          <div class="building">
+            <div class="building__image">
+              <img src="/images/works01/building4.webp" alt="側面に時計がある高層ビル">
+            </div>
+            <div class="building__desc">
+              <div class="building__title">
+                <div class="tag reverse">
+                  <p>04 Building</p>
+                </div>
+                <h2>Timekeeper Tower: Unique Architecture and Concrete Majesty</h2>
+              </div>
+              <div class="building__text">
+                <p>Welcome to the Timekeeper Tower, a remarkable high-rise boasting a distinctive feature: a clock adorning its facade. This architectural marvel stands out for its unconventional shape, a testament to innovative design and engineering. Constructed primarily of concrete, the Timekeeper Tower exudes strength and majesty, commanding attention from all who behold it. Its imposing presence on the skyline serves as a symbol of progress and precision, while the clock serves as a reminder of the relentless march of time. Whether admired from afar or explored up close, the Timekeeper Tower is sure to leave a lasting impression on all who encounter its unique beauty and grandeur.</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="section"></section>
       </div>
       <div class="pagination">
