add: 初回ローディング

--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -14,6 +14,11 @@ import "./scss/style.scss"
 		<title>Works01</title>
 	</head>
 	<body>
+    <div class="loading">
+      <div class="loading__title">
+        <p><span>Work01</span><span></span><span>Building HP</span></p>
+      </div>
+    </div>
     <header class="header">
       <div class="header__logo">
         <h1>Works01</h1>
