add: loading animation

--- a/src/pages/works01/index.astro
+++ b/src/pages/works01/index.astro
@@ -16,8 +16,13 @@ import "./scss/style.scss"
 	<body>
     <div class="loading">
       <div class="loading__title">
-        <p><span>Work01</span><span></span><span>Building HP</span></p>
+        <div class="loading__title-inner">
+          <p><span>Work01</span></p>
+          <span></span>
+          <p><span>Building HP</span></p>
+        </div>
       </div>
+      <div class="loading__inner"></div>
     </div>
     <header class="header">
       <div class="header__logo">
