--- a/src/pages/works01/scss/animation.scss
+++ b/src/pages/works01/scss/animation.scss
@@ -1,11 +1,13 @@
+@use "./variables.scss" as *;
+
 @mixin sequentialString($animation-name, $text-color, $number) {
   position: relative;
   top: 0;
   text-shadow: 0 #{$number}px 0 var($text-color);
   animation-name: $animation-name;
-  animation-duration: 0.5s;
+  animation-duration: $duration;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: $easing-transform;
 
   @keyframes #{$animation-name} {
     0% {
@@ -20,31 +22,30 @@
 @mixin scaleDown {
   transform: scale(1.3);
   animation-name: scaleDown;
-  animation-duration: 1.5s;
+  animation-duration: 1.4s;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: $easing-transform;
 
   @keyframes scaleDown {
     0% {
       transform: scale(1.3);
     }
     100% {
-      transform: scale(1.0);
+      transform: scale(1);
     }
   }
-
 }
 
 @mixin opacityString {
   opacity: 0.1;
   animation-name: opacityString;
-  animation-duration: 1s;
+  animation-duration: $duration;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-in;
+  animation-timing-function: $easing-transform;
 
   @keyframes opacityString {
     0% {
-      opacity: 1;
+      opacity: 0.1;
     }
     100% {
       opacity: 1;
@@ -54,22 +55,22 @@
 
 @mixin slideInFromLeft() {
   transform: translateX(calc(100% + 3vw));
-  
+
   animation-name: slideInFromLeft;
-  animation-duration: 1s;
+  animation-duration: 1.4s;
   animation-delay: 1s;
   animation-fill-mode: forwards;
-  animation-timing-function: ease;
+  animation-timing-function: $easing-transform;
 
   @keyframes slideInFromLeft {
     0% {
       transform: translateX(calc(100% + 3vw));
     }
     50% {
-      transform: translateX(0) skew(-30deg);
+      transform: translateX(0) skew(-12deg);
     }
     80% {
-      transform: translateX(0) skew(10deg);
+      transform: translateX(0) skew(5deg);
     }
     100% {
       transform: translateX(0) skew(0deg);
@@ -79,22 +80,21 @@
 
 @mixin slideInFromRight() {
   transform: translateX(calc(-100% - 3vw));
-  
   animation-name: slideInFromRight;
-  animation-duration: 1s;
+  animation-duration: 1.4s;
   animation-delay: 1s;
   animation-fill-mode: forwards;
-  animation-timing-function: ease;
+  animation-timing-function: $easing-transform;
 
   @keyframes slideInFromRight {
     0% {
       transform: translateX(calc(-100% - 3vw));
     }
     50% {
-      transform: translateX(0) skew(30deg);
+      transform: translateX(0) skew(12deg);
     }
     80% {
-      transform: translateX(0) skew(-10deg);
+      transform: translateX(0) skew(-5deg);
     }
     100% {
       transform: translateX(0) skew(0deg);
@@ -102,15 +102,14 @@
   }
 }
 
-
 @mixin slideInFromBottom($delay-time) {
   clip-path: inset(100% 0 0 0);
   -webkit-clip-path: inset(100% 0 0 0);
   animation-name: slideInFromBottom;
-  animation-duration: 0.5s;
+  animation-duration: $duration;
   animation-delay: #{$delay-time}s;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-out;
+  animation-timing-function: $easing-transform;
 
   @keyframes slideInFromBottom {
     0% {
@@ -128,10 +127,10 @@
   clip-path: inset(0);
   -webkit-clip-path: inset(0);
   animation-name: slideOutFromBottom;
-  animation-duration: 0.5s;
+  animation-duration: 1s;
   animation-delay: #{$delay-time}s;
   animation-fill-mode: forwards;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: $easing-transform;
 
   @keyframes slideOutFromBottom {
     0% {
