--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -31,6 +31,10 @@ body {
   height: 80px;
   padding-left: 15px;
   padding-right: 15px;
+
+  background: -moz-linear-gradient(top, #fff, rgba(1, 1, 1, 0));
+  background: -webkit-linear-gradient(top, #fff, rgba(1, 1, 1, 0));
+  background: linear-gradient(to bottom, #fff, rgba(1, 1, 1, 0));
 }
 
 .header__logo h1 {
@@ -52,13 +56,6 @@ body {
   width: 100%;
   height: 100%;
   font-family: melete;
-
-  border-radius: 20px;
-  background-size: cover;
-  background-position: center;
-  background-image: url("/public/images/works02/bg.jpg");
-
-  transition: 0.5s;
 }
 
 .fv__content h1 {
@@ -68,7 +65,7 @@ body {
   transform: translate(-50%, -50%);
 
   text-align: center;
-  color: #fff;
+  color: #333;
 }
 
 .fv__title-block {
@@ -97,8 +94,13 @@ body {
   will-change: transform opacity;
 }
 
-.section__title { 
+.section {
+  padding: 5rem 2.5rem;
+}
+
+.section__title {
   margin-bottom: 20px;
+  padding-bottom: 10px;
   border-bottom: solid 1.5px #333;
 }
 
@@ -106,33 +108,31 @@ body {
   font-size: 3vw;
 }
 
-.mission {
-  padding: 2.5rem;
-}
-
-.mission__button {
-  margin-top: 20px;
-}
-
 .slider {
-
+  position: relative;
+  overflow-x: hidden;
+  margin-right: -2.5rem;
 }
 
 .slider__inner {
   width: 100%;
+  margin-bottom: 80px;
   overflow-x: scroll;
+  transform: translateX(160px);
 }
 
 .slider__list {
   display: flex;
   gap: 2vw;
+  width: fit-content;
 }
 
 .slider__item {
-  // aspect-ratio: 1/3;
+  width: 25%;
 }
 
 .slider__item-block {
+  min-width: 300px;
   min-height: 200px;
 }
 
@@ -140,4 +140,157 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 16px;
+}
+
+.slider__option {
+  position: absolute;
+  right: 2.5rem;
+  bottom: 6.5px;
+}
+
+.slider__number {
+  text-align: right;
+  margin-bottom: 5px;
+}
+
+.slider__time {
+  display: flex;
+  width: 300px;
+  height: 5px;
+  border-radius: 5px;
+  background-color: #333;
+}
+
+.slider__time span {
+  display: block;
+  width: 45%;
+  height: 100%;
+  background: #fff;
+}
+
+.mission__title {
+  text-align: center;
+  margin-bottom: 5vw;
+}
+
+.mission__title h2 {
+  font-size: 10vw;
+}
+
+.mission__text {
+  width: 720px;
+}
+
+.mission__text p {
+  font-family: nagoda;
+  line-height: 4;
+}
+
+.technology__wrapper {
+  display: grid;
+  grid-template-rows: 50vh 50vh;
+  grid-template-columns: 48% 1fr;
+  gap: 16px;
+}
+
+.technology__item {
+  position: relative;
+}
+
+.technology__item.item-1 {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+}
+
+.technology__item.item-2 {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.technology__item.item-3 {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+.technology__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+.technology__box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  padding: 1vw;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  border-radius: 16px;
+  // background-color: #333;
+  word-break: break-word;
+}
+
+.technology__box h3 {
+  font-size: 2vw;
+  margin-bottom: 3vw;
+}
+
+.technology__box p {
+  line-height: 3;
+  font-family: nagoda;
+}
+
+.contact {
+  margin-bottom: 5rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  border-top: solid 1.5px #333;
+  border-bottom: solid 1.5px #333;
+  cursor: pointer;
+}
+
+.contact__title h2 {
+  font-size: 4vw;
+  margin-bottom: 80px;
+}
+
+.contact__text {
+  width: 50%;
+}
+
+.contact__text p {
+  font-family: nagoda;
+  line-height: 3;
+}
+
+.footer {
+  position: relative;
+  height: calc(100vh - 80px);
+  background-color: #333;
+}
+
+.footer__title {
+  transform: translateY(-2vw);
+}
+
+.footer__title h2 {
+  font-size: 13vw;
+  font-family: nagoda;
+  color: #fff;
+}
+
+.footer__text {
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+}
+
+.footer__text p {
+  font-family: nagoda;
+  color: #fff;
 }
