add: work02 particle

--- a/src/pages/works02/scss/style.scss
+++ b/src/pages/works02/scss/style.scss
@@ -18,6 +18,14 @@ body {
   color: #333;
 }
 
+.canvas-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -66,6 +74,10 @@ body {
 
   text-align: center;
   color: #333;
+}
+
+.fv__title {
+  mix-blend-mode: difference;
 }
 
 .fv__title-block {
