--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -58,29 +58,33 @@ import "./scss/style.scss"
         </div>
         <div class="slider">
           <div class="slider__inner">
-            <ul class="slider__list">
-              <li class="slider__item">
-                <div class="slider__item-block">
-                  <img src="/images/hover/image1.jpg" alt="">
-                </div>
-              </li>
-              <li class="slider__item">
-                <div class="slider__item-block">
-                  <img src="/images/hover/image1.jpg" alt="">
-                </div>
-              </li>
-              <li class="slider__item">
-                <div class="slider__item-block">
-                  <img src="/images/hover/image1.jpg" alt="">
-                </div>
-              </li>
-              <li class="slider__item">
-                <div class="slider__item-block">
-                  <img src="/images/hover/image1.jpg" alt="">
-                </div>
-              </li>
-            </ul>
-            <div class="slider__next"></div>
+            <div class="slider__next">
+              <img src="/images/works02/arrow.svg" alt="" width="80px">
+            </div>
+            <div class="slider__content">
+              <ul class="slider__list">
+                <li class="slider__item">
+                  <div class="slider__item-block">
+                    <img src="/images/works02/slider1.jpg" alt="">
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-block">
+                    <img src="/images/works02/slider2.jpg" alt="">
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-block">
+                    <img src="/images/works02/slider3.jpg" alt="">
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="slider__item-block">
+                    <img src="/images/works02/slider4.jpg" alt="">
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="slider__option">
             <div class="slider__number">
