fix: slider animation

--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -88,10 +88,10 @@ import "./scss/style.scss"
           </div>
           <div class="slider__option">
             <div class="slider__number">
-              <span>4 / 5</span>
+              <span><span class="slider__">1</span> / 5</span>
             </div>
             <div class="slider__time">
-              <span></span>
+              <span class="slider__time--animation"></span>
             </div>
           </div>
           <div class="slider__button button">
