add: slider count

--- a/src/pages/works02/index.astro
+++ b/src/pages/works02/index.astro
@@ -88,7 +88,7 @@ import "./scss/style.scss"
           </div>
           <div class="slider__option">
             <div class="slider__number">
-              <span><span class="slider__">1</span> / 5</span>
+              <span><span class="numerator">1</span> / <span class="denominator"></span></span>
             </div>
             <div class="slider__time">
               <span class="slider__time--animation"></span>
